tests/snapshots/examples_fixtures/Debug__ModuleGraphCycleA.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/ModuleGraphCycleA.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Debug.ModuleGraphCycleA` doesn't match file path `examples/Debug/ModuleGraphCycleA.flx`.

  --> examples/Debug/ModuleGraphCycleA.flx:3:1
  |
3 | module Debug.ModuleGraphCycleA {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
